--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,3 @@
-.switch-wrapper {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-.switch-wrapper > div {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
-#view {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 0;
-}
 #gui {
   position: fixed !important;
   right: 0;
@@ -92,8 +73,41 @@ hr {
   margin-top: -20px;
 }
 .docs {
-  height: 100%;
-  width: 100%;
+  text-align: justify;
+  margin: 0 1em;
+}
+
+.docs pre code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+  font-size: .8em;
+  border: 1px solid #999;
+  display: block;
+  padding: 20px;
+}
+
+.docs #toc {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 15%; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+  border-right: 1px solid rgba(128, 128, 128, 0.39);
+  padding: 10px;
+}
+
+.docs #toc ul {
+  list-style-type: none;
+  margin: 0;
+  padding: .25em;
+}
+
+.docs #main {
+  margin-left: 16%; /* Same as the width of the sidebar */
+  padding: 0px 10px;
 }
 
 .fullScreenToggle {
