--- a/src/Components/Docs/Docs.css
+++ b/src/Components/Docs/Docs.css
@@ -15,6 +15,42 @@
   font-weight: 500;
   color: rgb(48, 52, 68);
 }
+.docs .main small {
+  transition: opacity 1s;
+}
+.docs .main input[type=checkbox] {
+   width: 100%;
+   height: 100%;
+   opacity: 0;
+   display: none;
+}
+label {
+   cursor: pointer;
+}
+label:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  right: 0;
+  border-left: 8px solid black;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+}
+input[type=checkbox]:checked ~ p label:before {
+  border-left: 8px solid transparent;
+  border-top: 8px solid black;
+  border-right: 8px solid transparent;
+  margin-left: -4px;
+  margin-top: -4px
+}
+.docs .main input+p+small {
+  opacity: 0;
+}
+
+.docs .main input:checked + p + small {
+  opacity: 1;
+}
 
 .docs .main p code {
   background: white;
