--- a/src/Components/Docs/Docs.css
+++ b/src/Components/Docs/Docs.css
@@ -163,7 +163,7 @@ input[type=checkbox]:checked ~ p label:before {
 }
 
 .docs .toc .logo {
-  background: url('../Assets/hex_ico.svg') no-repeat;
+  background: url('../../Assets/hex_ico.svg') no-repeat;
   background-size: 30px; /** moved this property down */
   height: 35px;
   float:right; display:inline; width: 55%;
